<resources>
    <string name="app_name">Lab07</string>
    <string name="lbl_new_contact_title">New Contact</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="lbl_edit_contact_title">Edit Contact</string>
    <string name="app_startup_times">App startup times: </string>
    <string name="contact_image">Contact Image</string>
    <string name="your_content">Your content ...</string>
    <string name="write_external_file">WRITE EXTERNAL FILE</string>
    <string name="write_internal_file">WRITE INTERNAL FILE</string>
    <string name="read_external_file">READ EXTERNAL FILE</string>
    <string name="read_internal_file">READ INTERNAL FILE</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add">Add</string>
    <string name="list_of_contacts">List of contacts</string>
</resources>
