<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dot_margin_right">
        <EditText
            android:id="@+id/edtNewItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:padding="@dimen/dimen_10"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/contact_name" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/dimen_10"
            android:layout_marginLeft="@dimen/dimen_10"
            android:background="@drawable/back"
            android:padding="@dimen/dimen_10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:text="@string/add" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dot_margin_right"
        android:text="@string/list_of_contacts" />

    <ListView
        android:id="@+id/lvItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
