<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/imvImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/contact_image"
        android:src="@drawable/boy" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/contact_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/input_new_note" />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imvFavorite"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/contact_image"
        android:src="@drawable/star" />
</LinearLayout>